--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,12 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  height: 80px;
+}
+.App-subtitle {
+  height: 20px;
+  font-size: calc(8px + 2vmin);
+  color: #666666;
 }
 
 .App-link {
